# odin-slang

./: BUILD_SUCCESS.md  CMakeLists.txt  CMakeLists_standalone.txt  LICENSE  QUICK_START.md  README.md  SLANG_SETUP.md  bindgen.sjson  build.bat  build.sh  build_standalone.bat  example.c  import.odin  slangc.cpp  slangc.h  spirv_example.c  test_wrapper.c
demo/: comp.glsl  frag.glsl  main.odin  vert.glsl
demo/odin-slang/: slang.lib  slangc.odin
demo/shaders/: ComputeDemo.slang  VertexDemo.slang
include/: slang-tag-version.h
odin-slang/: gfx.lib  slang-rt.lib  slangc.lib  slangc.odin
